# p4_parralel

./: .gitignore  CMakeLists.txt  main.c  main2-a.c  main2-b.c
